<!--
  ~ Copyright (c) 2020. This software is owned by @Eric_gacoki
  -->

<resources>
    <string name="app_name">USCC Test Record</string>
    <string name="optimum_speed">OPTIMUM SPEED IN ONE CLICK</string>
    <string name="cloud_storage_speed">Cloud storage simplifies and fastens \'save\' and \'retrieve\' data processes. Multi-users support and real time updates  are among the many advantages of using this App!</string>
    <string name="next">Next</string>
    <string name="simple_to_use">SIMPLE TO USE</string>
    <string name="simple_just_for_you"><b>No technical skills are required</b> to use this app. Everything has been made simple for you!</string>
    <string name="no_data_leaks_nor_risks">NO DATA LEAKS NOR RISKS !</string>
    <string name="data_safety">Data safety is our first priority when it comes to user experience. For this reason we\'ve ensured that only authorized people can access the database. \n\n <b>Enjoy the App!</b></string>
    <string name="done">DONE</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="verify_your_identity">Verify your identity</string>
    <string name="sign_in">sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="try_again_in">Try again in :</string>
    <string name="forgot_details">Forgot details ?</string>
    <string name="report_issue">Report issue</string>
    <string name="plus">+</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="date">Date</string>
    <string name="no_data_text">No data yet. Click \'+\' button below to add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="hint_name">Name</string>
    <string name="temp">Temp</string>
    <string name="location">Location</string>
    <string name="age">Age</string>
    <string name="print_all">Print all</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="see_analysis">See Analysis</string>
    <string name="about_this_app">About this app</string>
    <string name="about_app_developer">About app developer</string>
    <string name="united_saints_christian_church">United Saints Christian \n Church</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate</string>
    <string name="x">X</string>
    <string name="developer_name">Eric gacoki</string>
    <string name="developer_role">Android software developer</string>
    <string name="lets_connect">let\'s connect</string>
    <string name="compatibility">Compatibility : Android API 23+</string>
    <string name="app_version">Version : 1.1.5</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="total">Total :</string>
</resources>