<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. This software is owned by @Eric_gacoki
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/seeAnalysis"
        android:icon="@drawable/ic_analysis"
        android:title="@string/see_analysis"
        app:showAsAction="withText" />
    <item
        android:id="@+id/aboutApp"
        android:icon="@drawable/ic_about"
        android:title="@string/about_this_app"
        app:showAsAction="collapseActionView" />

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/rateApp"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate" />
        <item
            android:id="@+id/aboutDev"
            android:icon="@drawable/ic_dev"
            android:title="@string/about_app_developer" />
    </group>
</menu>